@@ -1,7 +1,13 @@
 package tdunu.MsSeguridad.service.imp;
 
-import lombok.RequiredArgsConstructor;
+import java.time.Duration;
+import java.util.List;
+import java.util.stream.Collectors;
+
+import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Service;
+
+import lombok.RequiredArgsConstructor;
 import tdunu.MsSeguridad.model.entity.PermissionModel;
 import tdunu.MsSeguridad.model.entity.RoleModel;
 import tdunu.MsSeguridad.model.request.RoleRequest;
@@ -10,32 +16,35 @@ import tdunu.MsSeguridad.repository.PermissionRepository;
 import tdunu.MsSeguridad.repository.RoleRepository;
 import tdunu.MsSeguridad.service.RoleService;
 
-import java.util.List;
-import java.util.stream.Collectors;
-
 @Service
 @RequiredArgsConstructor
 public class RoleServiceImpl implements RoleService {
 
     private final RoleRepository roleRepository;
     private final PermissionRepository permissionRepository;
+    private final RedisTemplate<String, List<RoleResponse>> redisTemplate;
+
+    private static final String KEY_ROLES = "catalogo:roles";
 
     @Override
     public RoleResponse crear(RoleRequest request) {
         if (roleRepository.existsByNombre(request.getNombre())) {
-            throw new RuntimeException("El rol ya existe");
+            throw new IllegalArgumentException("El rol ya existe");
         }
         RoleModel role = new RoleModel();
         role.setNombre(request.getNombre());
         role.setDescripcion(request.getDescripcion());
         RoleModel saved = roleRepository.save(role);
+        if (Boolean.TRUE.equals(redisTemplate.hasKey(KEY_ROLES))) {
+            redisTemplate.delete(KEY_ROLES);
+        }
         return toResponse(saved);
     }
 
     @Override
     public RoleResponse actualizar(Long idRole, RoleRequest request) {
         RoleModel role = roleRepository.findById(idRole)
-                .orElseThrow(() -> new RuntimeException("Rol no encontrado"));
+                .orElseThrow(() -> new IllegalArgumentException("Rol no encontrado"));
         if (request.getNombre() != null) {
             role.setNombre(request.getNombre());
         }
@@ -43,17 +52,39 @@ public class RoleServiceImpl implements RoleService {
             role.setDescripcion(request.getDescripcion());
         }
         RoleModel updated = roleRepository.save(role);
+        if (Boolean.TRUE.equals(redisTemplate.hasKey(KEY_ROLES))) {
+            redisTemplate.delete(KEY_ROLES);
+        }
         return toResponse(updated);
     }
 
     @Override
     public void eliminar(Long idRole) {
+        if (Boolean.TRUE.equals(redisTemplate.hasKey(KEY_ROLES))) {
+            redisTemplate.delete(KEY_ROLES);
+        }
         roleRepository.deleteById(idRole);
     }
 
     @Override
     public List<RoleResponse> listar() {
-        return roleRepository.findAll().stream().map(this::toResponse).collect(Collectors.toList());
+
+        if (Boolean.TRUE.equals(redisTemplate.hasKey(KEY_ROLES))) {
+            return (List<RoleResponse>) redisTemplate.opsForValue().get(KEY_ROLES);
+        }
+
+        List<RoleResponse> lista = roleRepository.findAll()
+                .stream()
+                .map(this::toResponse)
+                .toList();
+
+        redisTemplate.opsForValue().set(
+                KEY_ROLES,
+                lista,
+                Duration.ofMinutes(10)
+        );
+
+        return lista;
     }
 
     @Override
